--- a/style.css
+++ b/style.css
@@ -175,11 +175,11 @@ body {
 }
 
 .course-details .btn.enroll {
-    background-color: #e74c3c; /* Red */
+    background-color:  rgba(12, 168, 12, 0.932); /* green */
 }
 
 .course-details .btn.watch {
-    background-color: #3498db; /* Blue */
+    background-color: rgb(15, 95, 243); /* Blue */
 }
 
 .course-details .btn:hover {
